--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h1>The Code Magazine</h1>
 
       <nav>
@@ -27,7 +28,9 @@
           height="50"
           width="50"
         />
-        <p>Posted by <strong>Hoang Khang</strong> on Monday, Mar 21st 2023</p>
+        <p id="author">
+          Posted by <strong>Hoang Khang</strong> on Monday, Mar 21st 2023
+        </p>
         <img
           src="img\post-img.jpg"
           alt="HTML code on a screen"
@@ -93,7 +96,7 @@
     </article>
     <aside>
       <h4>Related posts</h4>
-      <ul>
+      <ul class="related">
         <li>
           <img
             src="img/related-1.jpg"
@@ -102,12 +105,12 @@
             height="75"
           />
           <a href="#">How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img src="img/related-2.jpg" alt="Lightning" width="75" height="75" />
           <a href="#">The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -117,10 +120,10 @@
             height="75"
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
-    <footer>Copyright &copy; 2023 by Hoang Khang.</footer>
+    <footer><p id="copyright">Copyright &copy; 2023 by Hoang Khang.</p></footer>
   </body>
 </html>
